<resources>
    <string name="app_name">Compass</string>

    <string name="mac_address_text_view">MAC address of bluetooth device</string>
    <string name="calibrate_first_lamp_text_view">Calibrate first lamp`s position</string>
    <string name="calibrate_first_lamp_description">Rotate device to first lamp, tab the button and wait for 5 seconds</string>
    <string name="start_calibrate_button">Start calibrate</string>
    <string name="calibrate_done_button">done</string>

</resources>